# pipen-annotate

./: .gitignore  .pre-commit-config.yaml  README.md  pipen_annotate.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yml
pipen_annotate/: __init__.py  annotate.py  sections.py  utils.py
tests/: test_annotate.py  test_format_doc.py  test_sections.py  test_utils.py
