[tool.poetry]
name = "pipen-annotate"
version = "0.15.0"
description = "Use docstring to annotate pipen processes"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.9"
pipen = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^8"
pytest-cov = "^6"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
addopts = "-vv -p no:asyncio --cov-config=.coveragerc --cov=pipen_annotate --cov-report xml:.coverage.xml --cov-report term-missing"
# addopts = "-vv -p no:asyncio"
console_output_style = "progress"
junit_family = "xunit1"
filterwarnings = [
    "error"
]

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef", "union-attr"]
show_error_codes = true
strict_optional = false
