[project]
name = "pipen-annotate"
version = "1.0.3"
description = "Use docstring to annotate pipen processes"
authors = [{name = "pwwang", email = "pwwang@pwwang.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pipen>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
prerelease = "allow"

[tool.pytest.ini_options]
addopts = "-vv -p no:asyncio --cov-config=.coveragerc --cov=pipen_annotate --cov-report xml:.coverage.xml --cov-report term-missing"
# addopts = "-vv -p no:asyncio"
console_output_style = "progress"
junit_family = "xunit1"
filterwarnings = [
    "error"
]

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef", "union-attr"]
show_error_codes = true
strict_optional = false
